--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,7 @@ nav {
 .dark{    background-color: #080808;    opacity: 0.3; color:white; }
 .grades tr td,th{ padding: 0 20px 0 20px}
 .personal{width:50%;}
+.table_td_padd{ padding-bottom: 20px;}
 
 /*img*/
 .opct-img{   opacity: 0.5;}
