--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Contacts</title>
 
+     {% load staticfiles %}
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <!--<link href="../static/css/bootstrap.css" rel="stylesheet">-->
+    <!--<link href="../static/css/style.css" rel="stylesheet">-->
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 </head>
     <body>
@@ -18,9 +21,9 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li ><a href="index.html">Main</a></li>
-                            <li class="active"><a href="contact.html">Contacts</a></li>
-                            <li ><a href="student_list.html">Students</a></li>
+                            <li ><a href="{% url 'index' %}">Main</a></li>
+                            <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+                            <li ><a href="{% url 'student_list' %}">Students</a></li>
                         </ul>
                         <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
                         <a href="#"  class="top_mass">Inbox <span class="badge">42</span></a>
@@ -92,6 +95,6 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="../static/js/bootstrap.js"></script>
+       <script src="{% static 'js/bootstrap.js' %}"></script>
     </body>
 </html>
