--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Students</title>
 
+    {% load staticfiles %}
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <!--<link href="../static/css/bootstrap.css" rel="stylesheet">-->
+    <!--<link href="../static/css/style.css" rel="stylesheet">-->
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 </head>
     <body>
@@ -18,9 +21,9 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li ><a href="index.html">Main</a></li>
-                            <li><a href="contact.html">Contacts</a></li>
-                            <li class="active"><a href="student_list.html">Students</a></li>
+                            <li ><a href="{% url 'index' %}">Main</a></li>
+                            <li ><a href="{% url 'contact' %}">Contacts</a></li>
+                            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
                         </ul>
                         <p class="navbar-text navbar-right top_mass">Signed in as <a href="#" class="navbar-link">Mark Otto</a></p>
                         <a href="#"  class="top_mass" >Inbox <span class="badge">42</span></a>
@@ -45,7 +48,7 @@
                                     <th>Messages</th>
                                 </tr>
                                 <tr>
-                                    <td><a href="student_detail.html">1</a></td>
+                                    <td><a href="{% url 'student_detail' %}">1</a></td>
                                     <td>Pupkin</td>
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
@@ -53,7 +56,7 @@
                                     <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="student_detail.html">2</a></td>
+                                    <td><a href="{% url 'student_detail' %}">2</a></td>
                                     <td>Pupkin</td>
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
@@ -61,7 +64,7 @@
                                     <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="student_detail.html">3</a></td>
+                                    <td><a href="{% url 'student_detail' %}">3</a></td>
                                     <td>Pupkin</td>
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
@@ -69,7 +72,7 @@
                                     <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="student_detail.html">4</a></td>
+                                    <td><a href="{% url 'student_detail' %}">4</a></td>
                                     <td>Pupkin</td>
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
@@ -77,7 +80,7 @@
                                     <td><a href="#">Messages <span class="badge">3</span></a></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="student_detail.html">5</a></td>
+                                    <td><a href="{% url 'student_detail' %}">5</a></td>
                                     <td>Pupkin</td>
                                     <td>Vasya</td>
                                     <td>Ukraine Kharkiv Lenina str. 56</td>
@@ -99,6 +102,6 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="../static/js/bootstrap.js"></script>
+         <script src="{% static 'js/bootstrap.js' %}"></script>
     </body>
 </html>
