--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,5 +1,5 @@
 <h1> Quadratic </h1>
-<div> Calculating ax<sup>2</sup> + bx + c = 0</div>
+<div>п п╡п╟п╢я─п╟я┌п╫п╬п╣ я┐я─п╟п╡п╫п╣п╫п╦п╣   ax<sup>2</sup> + bx + c = 0</div>
 <br>
 a = {{ a }} <br>
 {{ a_error }} <br>
@@ -10,17 +10,15 @@ c = {{ c }} <br>
 <br>
 {% if calculate %}
     {% if D > 0 %}
-        Дискриминант: {{ D }}<br>
-        Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}<br>        
+        п■п╦я│п╨я─п╦п╪п╦п╫п╟п╫я┌: {{ D }}<br>
+        п п╡п╟п╢я─п╟я┌п╫п╬п╣ я┐я─п╟п╡п╫п╣п╫п╦п╣ п╦п╪п╣п╣я┌ п╢п╡п╟ п╢п╣п╧я│я┌п╡п╦я┌п╣п╩я▄п╫я▀я┘ п╨п╬я─п╫я▐: x1 = {{ x1 }}, x2 = {{ x2 }}<br>        
     {% elif D == 0 %}
-        Дискриминант: {{ D }} <br>
-        Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }} <br>
+        п■п╦я│п╨я─п╦п╪п╦п╫п╟п╫я┌: {{ D }} <br>
+        п■п╦я│п╨я─п╦п╪п╦п╫п╟п╫я┌ я─п╟п╡п╣п╫ п╫я┐п╩я▌, п╨п╡п╟п╢я─п╟я┌п╫п╬п╣ я┐я─п╟п╡п╫п╣п╫п╦п╣ п╦п╪п╣п╣я┌ п╬п╢п╦п╫ п╢п╣п╧я│я┌п╡п╦я┌п╣п╩я▄п╫я▀п╧ п╨п╬я─п╣п╫я▄: x1 = x2 = {{ x1 }} <br>
     {% elif D < 0 %}
-        Дискриминант: {{ D }} <br>
-        Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений. <br>
+        п■п╦я│п╨я─п╦п╪п╦п╫п╟п╫я┌: {{ D }} <br>
+        п■п╦я│п╨я─п╦п╪п╦п╫п╟п╫я┌ п╪п╣п╫я▄я┬п╣ п╫я┐п╩я▐, п╨п╡п╟п╢я─п╟я┌п╫п╬п╣ я┐я─п╟п╡п╫п╣п╫п╦п╣ п╫п╣ п╦п╪п╣п╣я┌ п╢п╣п╧я│я┌п╡п╦я┌п╣п╩я▄п╫я▀я┘ я─п╣я┬п╣п╫п╦п╧. <br>
 <br>
-        P.S.  А на самом деле решение есть: <br>
-        x<sub>1</sub> = {{ x1 }} <br>
-        x<sub>2</sub> = {{ x2 }} <br>                
     {% endif %}
 {% endif %}
+
