--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -97,7 +97,7 @@
       </footer>
     </div>
 
-    <script src="../static/js/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.js"></script>
        
   </body>
