--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,4 +1,4 @@
-{{ question }}
+<!-- {{ question }} -->
 <h1>{{ question.question_text }}</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -12,3 +12,8 @@
 <input type="submit" value="Vote"/>
 </form>
 
+<!-- <ul>
+{% for choice in question.choice_set.all %}
+    <li>{{ choice.choice_text }}</li>
+{% endfor %}
+</ul> -->
