--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,23 +1,23 @@
-﻿<!DOCTYPE html>
+﻿{%load staticfiles%}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="AlexI">
-    <link rel="icon" href="../static/images/favicon.ico">
-     <link href="../static/css/bootstrap.css" rel="stylesheet">
-	 <link href="../static/css/style.css" rel="stylesheet">
-     <script src="../static/js/bootstrap.js"></script>
+    <link rel="icon" href="{% static 'images/favicon.ico' %}">
+     <link href="{%static 'css/bootstrap.css' %}" rel="stylesheet">
+	 <link href="{%static 'css/style.css' %}" rel="stylesheet">
+     <script src="{%static 'js/bootstrap.js' %}"></script>
     <title>Student List</title>
   </head>
 
   <body>
-    <div class="black">
+        <div class="black">
       <ul class="nav nav-tabs">
-      <li role="presentation"><a href="index.html">Main</a></li>
-      <li role="presentation"><a href="contact.html">Contacts</a></li>
-	  <li role="presentation" class="active"><a href="student_list.html">Students</a></li>
-	  
+      <li role="presentation" ><a href="{% url 'index'%}">Main</a></li>
+      <li role="presentation" ><a href="{% url 'contact'%}">Contacts</a></li>
+	  <li role="presentation" class="active"><a href="{% url 'student_list'%}">Students</a></li>
       </ul>
 	 <h1 class="dl">Список Students PyBursa</h2>
 	 <p>Список студентов по состоянию на 15.11.2015</p>
@@ -42,7 +42,7 @@
         </tr>
         <tr>
           <td class="number_cell1">
-            <a href="student_detail.html">1</a>
+            <a href="{% url 'student_detail'%}">1</a>
           </td>
           <td class="number_cell2">
             Лучший
