--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,8 +136,10 @@ body .font1 {color: #fff;
 }
 
 .h3 {
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 10px;
+  font-weight: 900;
+  font-size: xx-large;
 }
 
 .navbar-header {
