--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Python Course - Contacts</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-	<link href="../static/css/style.css" rel="stylesheet">
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+	  <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -19,14 +22,14 @@
 		    <span class="icon-bar"></span>
 		    <span class="icon-bar"></span>
 		  </button>
-		  <img src="../static/images/python.png" class="navbar-logo">
+		  <img src="{% static 'images/python.png' %}" class="navbar-logo">
 		</div>
 
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav">
-		    <li><a href="index.html">Main</a></li>
-		    <li class="active"><a href="contact.html">Contacts</a></li>
-        <li><a href="student_list.html">Students</a></li>
+		    <li><a href="{% url 'index' %}">Main</a></li>
+		    <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+        <li><a href="{% url 'student_list' %}">Students</a></li>
 		  </ul>
 		</div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -35,7 +38,7 @@
 <div>
   <div class="col-sm-6 col-md-4">
     <div class="contact thumbnail">
-      <img src="../static/images/owl.jpg" alt="Founder photo" class='photo1 img-circle'>
+      <img src="{% static 'images/owl.jpg' %}" alt="Founder photo" class='photo1 img-circle'>
       <div class="caption">
         <h3>Founder</h3>
         <p>Name: <span><b>Pavel Obod</b></span></p>
@@ -50,7 +53,7 @@
 <div>
   <div class="col-sm-6 col-md-4">
     <div class="contact thumbnail">
-      <img src="../static/images/fox.jpg" alt="Manager photo" class='photo2 img-circle'>
+      <img src="{% static 'images/fox.jpg' %}" alt="Manager photo" class='photo2 img-circle'>
       <div class="caption">
         <h3>Manager</h3>
         <p>Name: <span><b>Daria Mykhalevych</b></span></p>
@@ -65,7 +68,7 @@
 <div>
   <div class="col-sm-6 col-md-4">
     <div class="contact thumbnail">
-      <img src="../static/images/raccoon1.jpg" alt="Director photo" class='photo3 img-circle'>
+      <img src="{% static 'images/raccoon1.jpg' %}" alt="Director photo" class='photo3 img-circle'>
       <div class="caption">
         <h3>Director</h3>
         <p>Name: <span><b>Alexey Radchenko</b></span></p>
@@ -78,8 +81,6 @@
 </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
