--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-
+{% load staticfiles %}
 <!DOCTYPE html>
 <!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
 <!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
@@ -13,10 +13,10 @@
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
 		<title>Contacts</title>
 
-		<link rel="stylesheet" href="../static/css/bootstrap.min.css">
-	    <link rel="stylesheet" href="../static/css/section.css">
-	    <link rel="stylesheet" href="../static/css/about.css">
-	    <link rel="stylesheet" href="../static/css/style.css">
+		<link rel="stylesheet" href={% static "css/bootstrap.min.css" %}>
+	    <link rel="stylesheet" href={% static "css/section.css" %}>
+	    <link rel="stylesheet" href={% static "css/about.css" %}>
+	    <link rel="stylesheet" href={% static "css/style.css" %}>
 
 	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!--[if lt IE 9]>
@@ -42,15 +42,15 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">PyBursa</a>
+					<a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
 				</div> <!-- /.navbar-header -->
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">Main</a></li>
-						<li class="active"><a href="contact.html">Contacts</a></li>
-						<li><a href="student_list.html">Students</a></li>
+						<li><a href="{% url 'index' %}">Main</a></li>
+						<li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+						<li><a href="{% url 'student_list' %}">Students</a></li>
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container -->
@@ -62,7 +62,7 @@
 	<section class="section-background">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="index.html">Main</a></li>
+				<li><a href="{% 'index' %}">Main</a></li>
 				<li class="active">&nbsp;Contacts</li>
 			</ol>
 		</div> <!-- /.container -->
@@ -79,11 +79,10 @@
 			<div class="row">
 				<div class="col-sm-3 col-xs-6">
 					<div class="team-item">
-						<img src="../static/images/team-1.png" alt="team-image" class="team-img">
+						<img src="{% static 'images/team-1.png' %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
 						</h4>
-						<h4 class="team-item-id">
-							Founder
+						<h4 class="team-item-id""{% static "
 						</h4>
 						<ul class="team-item-name-2">
 							<li>Name: David Martin</li>
@@ -96,7 +95,7 @@
 
 				<div class="col-sm-3 col-xs-6">
 					<div class="team-item">
-						<img src="../static/images/team-2.png" alt="team-image" class="team-img">
+						<img src="{% static 'images/team-2.png' %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
 						</h4>
 						<h4 class="team-item-id">
@@ -112,7 +111,7 @@
 				</div> <!-- /.col-md-3 -->
 				<div class="col-sm-3 col-xs-6">
 					<div class="team-item">
-						<img src="../static/images/team-3.png" alt="team-image" class="team-img">
+						<img src="{% static 'images/team-3.png' %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
 						</h4>
 						<h4 class="team-item-id">
@@ -128,7 +127,7 @@
 				</div> <!-- /.col-md-3 -->
 				<div class="col-sm-3 col-xs-6">
 					<div class="team-item">
-						<img src="../static/images/team-4.png" alt="team-image" class="team-img">
+						<img src="{% static 'images/team-4.png' %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
 						</h4>
 						<h4 class="team-item-id">
@@ -166,10 +165,10 @@
 	
 
 
-	<script src="../static/js/jquery-1.11.2.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/contact.js"></script>
-	<script src="../static/js/script.js"></script>
+	<script src="{% static 'js/jquery-1.11.2.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/contact.js' %}"></script>
+	<script src="{% static 'js/script.js' %}"></script>
 
 
 </body>
