--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -13,10 +13,10 @@
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
 		<title>Padafa Evgeniy</title>
 
-		<link rel="stylesheet" href="../static/css/bootstrap.min.css">
-	    <link rel="stylesheet" href="../static/css/section.css">
-	    <link rel="stylesheet" href="../static/css/about.css">
-	    <link rel="stylesheet" href="../static/css/style.css">
+		<link rel="stylesheet" href={% static "css/bootstrap.min.css" %}>
+	    <link rel="stylesheet" href={% static "css/section.css" %}>
+	    <link rel="stylesheet" href={% static "css/about.css" %}>
+	    <link rel="stylesheet" href={% static "css/style.css" %}>
 
 	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!--[if lt IE 9]>
@@ -42,15 +42,15 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">PyBursa</a>
+					<a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
 				</div> <!-- /.navbar-header -->
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">Main</a></li>
-						<li><a href="contact.html">Contacts</a></li>
-						<li><a href="student_list.html">Students</a></li>
+						<li><a href="{% url 'index' %}">Main</a></li>
+						<li><a href="{% url 'contact' %}">Contacts</a></li>
+						<li><a href="{% url 'student_list' %}">Students</a></li>
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container -->
@@ -62,7 +62,7 @@
 	<section class="section-background">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="index.html">Main</a></li>
+				<li><a href="{% url 'index' %}">Main</a></li>
 				<li class="active">&nbsp;Padafa Evgeniy</li>
 			</ol>
 		</div> <!-- /.container -->
@@ -79,7 +79,7 @@
 			<div class="row">
 				<div class="col-sm-3 col-xs-6">
 					<div class="team-item">
-						<img src="../static/images/ava-padafa.jpg" alt="team-image" class="team-img">
+						<img src="{% static "images/ava-padafa.jpg" %}" alt="team-image" class="team-img">
 					</div> <!-- /.team-item -->
 				</div> <!-- /.col-md-3 -->
 			</div> <!-- /.team-item -->
@@ -174,10 +174,10 @@
 	
 
 
-	<script src="../static/js/jquery-1.11.2.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/contact.js"></script>
-	<script src="../static/js/script.js"></script>
+	<script src="{% static 'js/jquery-1.11.2.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/contact.js' %}"></script>
+	<script src="{% static 'js/script.js' %}"></script>
 
 
 </body>
