MVC model my site fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -145,3 +145,10 @@ body .font1 {color: #fff;
 .navbar-header {
     float: left;
   }
+
+.simple {font-size: medium;
+  margin-bottom: 30px;
+}
+
+.center {text-align: center;
+}
