--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -36,14 +36,14 @@
 	  </nav>
     <div class='container' id='id1'>
       <h1>Список студентов курсов PyBursa</h1>
-      <h4><p>Ниже представлен список студентов PyBursa, выпуск декабрь 2015 года</p></h4>
+      <p class='simple'>Ниже представлен список студентов PyBursa, выпуск декабрь 2015 года</p>
       <table class="table table-hover">
     				<thead class='table1'>
 								<tr>
-									<th>№</th>
+									<th>No</th>
 									<th>Surname</th>
 									<th>Name</th>
-									<th>Address</th>
+									<th class='center'>Address</th>
 									<th>Skype</th>
 								</tr>
 						</thead>
