--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
 <!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
@@ -12,10 +13,10 @@
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
 		<title>PyBursa</title>
 		
-	    <link rel="stylesheet" href={% static "css/section.css" %}>
-		<link rel="stylesheet" href={% static "css/bootstrap.min.css" %}>
-	    <link rel="stylesheet" href={% static "css/style.css" %}>
-	    <link rel="stylesheet" href={% static "css/one-page.css" %}>
+	    <link rel="stylesheet" href="{% static "css/section.css" %}">
+		<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+	    <link rel="stylesheet" href="{% static "css/style.css" %}">
+	    <link rel="stylesheet" href="{% static "css/one-page.css" %}">
 
 
 	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -44,15 +45,15 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
+					<a class="navbar-brand" href="{% url "index" %}">PyBursa</a>
 				</div> <!-- /.navbar-header -->
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href="{% url 'index' %}">Main</a></li>
-						<li><a href="{% url 'contact' %}">Contacts</a></li>
-						<li><a href="{% url 'student_list %}">Students</a></li>
+						<li class="active"><a href="{% url "index" %}">Main</a></li>
+						<li><a href="{% url "contact" %}">Contacts</a></li>
+						<li><a href="{% url "student_list" %}">Students</a></li>
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container -->
@@ -82,7 +83,7 @@
 				<div class="underline purple"></div>
 				<div class="row">
 					<div class="">
-						<img src="{% static 'images/dixon.jpg' %}" width="320" alt="service" class="service-img img-responsive">
+						<img src="{% static "images/dixon.jpg" %}" width="320" alt="service" class="service-img img-responsive">
 					</div>
 					<div class="col-md-offset-4 col-md-8 col-sm-12 services">
 						<div class="row">
@@ -238,10 +239,10 @@
 	
 
 
-	<script src="{% static 'js/jquery-1.11.2.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/contact.js' %}"></script>
-	<script src="{% static 'js/script.js' %}"></script>
+	<script src="{% static "js/jquery-1.11.2.min.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/contact.js" %}"></script>
+	<script src="{% static "js/script.js" %}"></script>
 
 
 </body>
