--- a/templates/contact.html
+++ b/templates/contact.html
@@ -62,7 +62,7 @@
 	<section class="section-background">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="{% "index" %}">Main</a></li>
+				<li><a href="{% url "index" %}">Main</a></li>
 				<li class="active">&nbsp;Contacts</li>
 			</ol>
 		</div> <!-- /.container -->
