--- a/templates/contact.html
+++ b/templates/contact.html
@@ -97,6 +97,7 @@
 					<div class="team-item">
 						<img src="{% static "images/team-2.png" %}" alt="team-image" class="team-img">
 						<h4 class="team-item-name">
+							Founder
 						</h4>
 						<h4 class="team-item-id">
 							Manager
