--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    {% load staticfiles %}
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,15 +29,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">PyBursa</a>
+      <a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Main <span class="sr-only">(current)</span></a></li>
-<li><a href="contact.html">Contacts</a></li>
-<li><a href="student_list.html">Students</a></li>        
+        <li class="active"><a href="{% url 'index' %}">Main <span class="sr-only">(current)</span></a></li>
+<li><a href="{% url 'contact' %}">Contacts</a></li>
+<li><a href="{% url 'student_list' %}">Students</a></li>        
           </ul>
         </li>
       </ul>
@@ -63,6 +64,6 @@ employer and dark at night, tell about the technology, as a rule, you use it..</
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
   </body>
 </html>
