KZ_3_2 change contact.html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -33,9 +33,9 @@
               <h2>Дария Михалевич    <small>Manager</small>
               </h2>
             </div>
-          <p>daria.mykhalevych@gmail.com</p>
-          <p>skype: darka.darka.darka.darka.</p> 
-          <p>+38 096 469 15 57</p> 
+          <p>Email: daria.mykhalevych@gmail.com</p>
+          <p>Skype: darka.darka.darka.darka.</p> 
+          <p>Phone: +38 096 469 15 57</p> 
           </div>
         </div>
       </div>
@@ -49,8 +49,8 @@
               <h2>Павел Обод    <small>Founder</small>
               </h2>
             </div>
-            <p>itbursa100@gmail.com</p>
-            <p>skype: azaless</p> 
+            <p>Email: itbursa100@gmail.com</p>
+            <p>Skype: azaless</p> 
           </div>
         </div>
       </div>
@@ -64,8 +64,8 @@
               <h2>Татьяна Орехова    <small>Director</small>
               </h2>
             </div>
-            <p>to096540848@gmail.com</p>
-            <p>skype: Tatyana_Oriekhova</p> 
+            <p>Email: to096540848@gmail.com</p>
+            <p>Skype: Tatyana_Oriekhova</p> 
             <p>+38 099 186 64 75</p>
           </div>
         </div>
