4 1st tag from view to html vorks! use this just like example

--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,6 +1,6 @@
 hello world!
 
-<form action="/your-name/?a=dasd" method="post">
+<form action="/quadratic/results/?a={b}&a={b}&c={c}" method="post">
     <label for="your_name">a: </label>
 	<input type="text" name="a">
 	<label for="your_name">b: </label>
@@ -10,7 +10,8 @@ hello world!
     <input type="submit" value="OK">
 </form>
 
-https://docs.djangoproject.com/en/1.8/topics/forms/
+
+{{a}}
 
 
 
