--- a/templates/contact.html
+++ b/templates/contact.html
@@ -66,7 +66,7 @@
             </div>
             <p>Email: to096540848@gmail.com</p>
             <p>Skype: Tatyana_Oriekhova</p> 
-            <p>+38 099 186 64 75</p>
+            <p>Phone: +38 099 186 64 75</p>
           </div>
         </div>
       </div>
