--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,8 +9,8 @@
     <title>Main</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
+    <link href="{% static 'css/style.css'%}" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -23,14 +24,14 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">
-              <img class="logo" alt="logo" src="../static/images/logo_itbursa.png">
+            <a class="navbar-brand" href="{% url 'index' %}">
+              <img class="logo" alt="logo" src="{% static 'images/logo_itbursa.png' %}">
             </a>
           </div>
             <ul class="nav nav-pills">
-              <li role="presentation" class="active"><a href="index.html">Main</a></li>
-              <li role="presentation" class="passive"><a href="contact.html">Contacts</a></li>
-              <li role="presentation" class="passive"><a href="student_list.html">Students</a></li>
+              <li role="presentation" class="active"><a href="{% url 'index' %}">Main</a></li>
+              <li role="presentation" class="passive"><a href="{% url 'contact' %}">Contacts</a></li>
+              <li role="presentation" class="passive"><a href="{% url 'student_list' %}">Students</a></li>
             </ul>
         </div>
       </nav>
@@ -406,6 +407,6 @@
       </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static 'js/bootstrap.js'%}"></script>
   </body>
 </html>
