--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,8 +9,9 @@
     <title>Student_list</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
+    <link href="{% static 'css/style.css'%}" rel="stylesheet">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,14 +24,14 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">
-              <img class="logo" alt="logo" src="../static/images/logo_itbursa.png">
+            <a class="navbar-brand" href="{% url 'index' %}">
+              <img class="logo" alt="logo" src="{%static 'images/logo_itbursa.png'%}">
             </a>
           </div>
             <ul class="nav nav-pills">
-              <li role="presentation" class="passive"><a href="index.html">Main</a></li>
-              <li role="presentation" class="passive"><a href="contact.html">Contacts</a></li>
-              <li role="presentation" class="active"><a href="student_list.html">Students</a></li>
+              <li role="presentation" class="passive"><a href="{% url 'index'%}">Main</a></li>
+              <li role="presentation" class="passive"><a href="{% url 'contact'%}">Contacts</a></li>
+              <li role="presentation" class="active"><a href="{% url 'student_list'%}">Students</a></li>
             </ul>
         </div>
     </nav>
@@ -52,7 +54,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><a href="student_detail.html">1</a></td>
+            <td><a href="{% url 'student_detail'%}">1</a></td>
             <td>Dallas</td>
             <td>Korben</td>
             <td>1, The 23rd of August st., Kharkiv city, Ukraine</td>
@@ -93,6 +95,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static 'js/bootstrap.js'%}"></script>
   </body>
 </html>
