views.py changed3

--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -35,12 +35,12 @@
 			<div class='jumbotron'>
 				<h2 class='text-uppercase'>Results</h2>
 				<h3>Квадратное уравнеие: a*x*x + b*x + c = 0</h3>
-				<p>a = {{ a }} {{ dic }}</p>
-				<p>b = {{ b }} {{ dic.b }}</p>
-				<p>c = {{ c }} {{ dic.c }}</p>
+				<p>a = {{ a }} {{ error_a }}</p>
+				<p>b = {{ b }} {{ error_b }}</p>
+				<p>c = {{ c }} {{ error_c }}</p>
 				
-				<p>Дискриминант: {{ d }}</p>
-				<p>{{ result }} {{ x }} {{ y }}</p>
+				<p>{{ result_d }}</p>
+				<p>{{ result }}</p>
 				
 			</div>
 		</div>
