--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -56,11 +56,15 @@
               <li>{{ key }} = {{value}}</li>
             {% endfor %}-->
 
-            <li>a = {{a}}</li>
-            <li>b = {{b}}</li>
-            <li>c = {{c}}</li>
+            <li>a = {{a}}<br>
+            {{a_error}}</li>
+            <li>b = {{b}}<br>
+            {{b_error}}</li>
+            <li>c = {{c}}<br>
+            {{c_error}}</li>
           </ul>
-          {{d}}
+          {{d}}<br>
+          {{d_error}}<br>
           {{solution}}
         </div>
       </div>
