views.py changed6

--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -35,7 +35,7 @@
 			<div class='jumbotron'>
 				<h2 class='text-uppercase'>Results</h2>
 				<h3>Квадратное уравнеие: a*x*x + b*x + c = 0</h3>
-				<p>a = {{ a }} {{ error_a }}</p>
+				<p>a = {{ a }} {{ error_a }}{{ error_o }}</p>
 				<p>b = {{ b }} {{ error_b }}</p>
 				<p>c = {{ c }} {{ error_c }}</p>
 				
