--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -2100,7 +2100,7 @@ pre code {
   }
   .col-lg-12 {
     width: 100%;
-    color: white;
+    color: #290701;
   }
   .col-lg-11 {
     width: 91.66666667%;
