--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -37,14 +37,16 @@
        <h3>a*x*x + b*x + c = 0</h3>
        <ul>
         <li>
-          a = {{a}} {{error_one}}
+          a = {{a}} </br> {{err1}}
         </li>
         <li>
-          a = {{b}} {{error_two}}
+          a = {{b}} </br> {{err2}}
         </li>
         <li>
-          a = {{c}} {{error_three}}
+          a = {{c}} </br> {{err3}}
         </li>
+        <h3>{{d}}</h3>
+        <h3>{{x}}<h3>
        </ul>
    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
