4 bad, but works

--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,10 +1,33 @@
-hello world!
+
+
+<pre>Квадратное уравнения: a*x*x + b*x +c = 0</pre>
+
+<pre>
+a = {{a}}
+{{a_err_1}}
+{{a_err_2}}
+{{is_int_err_1}}
 
 
 
-{{a}}
-{{b}}
-{{c}}
+b = {{b}}
+c = {{c}}
 
 
+</pre>
+
+
+<pre>x = {{x}}</pre>
+
+<pre>
+{% if b == 3 %}
+    b is 3
+{% endif %}
+</pre>
+
+<pre>
+{% if discr %}
+Дискриминант: {{discr}}
+{% endif %}
+</pre>
 
