trying to solv some problems

--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -77,7 +77,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div>
-	<h1>Solving binar equation a*x*x + b*x + c = 0 </h1>
+	<h1>Квадратное уравнение a*x*x + b*x + c = 0 </h1>
 	
     <p>a={{a}}</p>
 	<p>{{a_error}}</p>
