--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -40,10 +40,10 @@
           a = {{a}} </br> {{err1}}
         </li>
         <li>
-          a = {{b}} </br> {{err2}}
+          b = {{b}} </br> {{err2}}
         </li>
         <li>
-          a = {{c}} </br> {{err3}}
+          c = {{c}} </br> {{err3}}
         </li>
         <h3>{{d}}</h3>
         <h3>{{x}}<h3>
