--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -31,19 +31,19 @@
 
 <div class="container">
 <div class="panel-color jumbotron">
-<p>Квадратное уравнение a*x*x + b*x + c=0 </p>
+<div>Квадратное уравнение a*x*x + b*x + c = 0 </div><br>
 
 <ul>
-  <li>a = {{a}}</li> 
-  <p>{{a_error}}</p>
-  <li>b = {{b}}</li> 
-  <p>{{b_error}}</p>
-  <li>c = {{c}}</li> 
-  <p>{{c_error}}</p>
+  <li>a = {{a}} <br>
+  {{a_error}}</li>
+  <li>b = {{b}}<br> 
+  {{b_error}}</li>
+  <li>c = {{c}}<br> 
+  {{c_error}}</li>
 </ul>
-<p>{{ d }}</p>
+<div>{{ d }}</div><br>
   
-<p>{{ mes }}</p>
+<div>{{ mes }}</div>
 	
 
 
