--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -4,30 +4,11 @@
 
 <pre>
 a = {{a}}
-{{a_err_1}}
-{{a_err_2}}
-{{is_int_err_1}}
-
-
-
+{{check_on_error_a}}
 b = {{b}}
+{{check_on_error_b}}
 c = {{c}}
+{{check_on_error_c}}
 
-
-</pre>
-
-
-<pre>x = {{x}}</pre>
-
-<pre>
-{% if b == 3 %}
-    b is 3
-{% endif %}
-</pre>
-
-<pre>
-{% if discr %}
-Дискриминант: {{discr}}
-{% endif %}
 </pre>
 
