--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -11,12 +11,12 @@
 
 <h1> Quadratic result </h1>
 <h4> Квадратное уравнение ax<sup>2</sup> + bx + c = 0</h4>
-<p>a = {{ a }} </p>
-<p>{{ a_error }} </p>
-<p>b = {{ b }} </p>
-<p>{{ b_error }} </p>
-<p>c = {{ c }} </p>
-<p>{{ c_error }} </p>
+a = {{ a }} <br>
+{{ a_error }} <br>
+b = {{ b }} <br>
+{{ b_error }} <br>
+c = {{ c }} <br>
+{{ c_error }} <br>
 
 
 {% if decision %}
