--- a/pybursa/templates/index.html
+++ b/pybursa/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ITBursa</title>
-    <link rel="stylesheet" href="../static/css/style.css">
-    <style>
+    <title>ITBursa main page</title>
+    <style> 
       body{background-image: url('../static/images/pic4.jpg') !important;
       background-repeat: none; 
       background-attachment: fixed;
@@ -16,7 +16,9 @@
     </style>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jumbotron.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,15 +38,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">ITBursa-2015</a>
+      <a class="navbar-brand" href="{% url 'index' %}">ITBursa-2015</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Main</a></li>
-        <li><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
-        <li><a href="student_list.html">Students<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="{% url 'index' %}">Main</a></li>
+        <li><a href="{% url 'contact' %}">Contacts<span class="sr-only">(current)</span></a></li>
+        <li><a href="{% url 'student_list' %}">Students<span class="sr-only">(current)</span></a></li>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -62,13 +64,13 @@
 </div>
 <div class="jumbotron">
   <div class="container">
-    <img src="../static/images/pic.jpg" class="img-responsive" alt="Responsive image">
+    <img src="{% static 'images/pic.jpg' %}" class="img-responsive" alt="Responsive image">
     <p>Courses can be taken in any order. If current dates are unavailable, please check back often as they are always being added.</p> 
   </div>
 </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static "js/bootstrap.js" %}"></script>
   </body>
 </html>
