--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -2,12 +2,12 @@
 <div> Calculating ax<sup>2</sup> + bx + c = 0</div>
 <br>
 <ul>
-<li>a = {{ a }} <br>
-{{ err_a}} <br>
-b = {{ b }} <br>
-{{ err_b }} <br>
-c = {{ c }} <br>
-{{ err_c }} <br>
+<li>a = {{ a }}</li>
+<i>{{ err_a}}</i> <br>
+<li>b = {{ b }}</li>
+<i>{{ err_b }}</i> <br>
+<li>c = {{ c }}</li>
+<i>{{ err_c }}</i> <br>
 </ul>
 <br>
 {{ d }}
