--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,15 +1,12 @@
-<h1> Quadratic equation</h1>
-<div> Calculating ax<sup>2</sup> + bx + c = 0</div>
-<br>
+<p>Квадратное уравнение a*x*x + b*x + c = 0</p>
 <ul>
 <li>a = {{ a }}</li>
-<i>{{ err_a}}</i> <br>
+<i>{{ err_a}}</i>
 <li>b = {{ b }}</li>
-<i>{{ err_b }}</i> <br>
+<i>{{ err_b }}</i>
 <li>c = {{ c }}</li>
-<i>{{ err_c }}</i> <br>
+<i>{{ err_c }}</i>
 </ul>
-<br>
 {{ d }}
 <br>
 <br>
