--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,13 +1,13 @@
 <p>Квадратное уравнение a*x*x + b*x + c = 0</p>
 <ul>
 <li>a = {{ a }}</li>
-<i>{{ a_error}}</i>
+<i>{{ err_a}}</i>
 <li>b = {{ b }}</li>
-<i>{{ b_error }}</i>
+<i>{{ err_b }}</i>
 <li>c = {{ c }}</li>
-<i>{{ c_error }}</i>
+<i>{{ err_c }}</i>
 </ul>
 {{ d }}
 <br>
 <br>
-{{ mes }}
+{{ msg }}
