--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,9 +15,9 @@
 <li>c = {{ c }}
 <i>{{ err_c }}</i></li>
 </ul>
-{{ d }}
+<div>{{ d }}</div>
 <br>
 <br>
-{{ msg }}
+<div>{{ msg }}</div>
 </body>
 </html>
